--- a/src/main/java/home/HotelHubLogado.form
+++ b/src/main/java/home/HotelHubLogado.form
@@ -106,6 +106,11 @@
       </Layout>
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel3">
+          <Properties>
+            <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+              <Image iconType="2" name="C:\Users\FELIPEEDUARDOMONARI\Documents\NetBeansProjects\HotelHub-main\images\logo-hoteo.png"/>
+            </Property>
+          </Properties>
         </Component>
       </SubComponents>
     </Container>
