--- a/src/main/java/cadastros/WinReservas.form
+++ b/src/main/java/cadastros/WinReservas.form
@@ -148,7 +148,7 @@
             <Component class="javax.swing.JLabel" name="jLabel1">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="2" name="C:\Users\FELIPEEDUARDOMONARI\Documents\NetBeansProjects\HotelHub-main\images\loguilho-hotilho.png"/>
+                  <Image iconType="2" name="C:\Users\monari\Documents\NetBeansProjects\HotelHub-main\images\loguilho-hotilho.png"/>
                 </Property>
               </Properties>
             </Component>
@@ -414,7 +414,7 @@
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
           <SubComponents>
-            <Component class="javax.swing.JTable" name="reservas">
+            <Component class="javax.swing.JTable" name="JTreservas">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
                   <Connection code="tabelaReservas" type="code"/>
